--- a/translations/tr/weapons.phrases.tf.txt
+++ b/translations/tr/weapons.phrases.tf.txt
@@ -156,6 +156,98 @@
 	{
 		"tr"	"VİTATESTERE"
 	}
+	"TF_WEAPON_BAT"
+	{
+		"tr"	"SOPA"
+	}
+	"TF_WEAPON_BOTTLE"
+	{
+		"tr"	"ŞİŞE"
+	}
+	"TF_WEAPON_FIREAXE"
+	{
+		"tr"	"YANGIN BALTASI"
+	}
+	"TF_WEAPON_CLUB"
+	{
+		"tr"	"GURKA KAMASI"
+	}
+	"TF_WEAPON_KNIFE"
+	{
+		"tr"	"BIÇAK"
+	}
+	"TF_WEAPON_FISTS"
+	{
+		"tr"	"YUMRUK"
+	}
+	"TF_WEAPON_SHOVEL"
+	{
+		"tr"	"KÜREK"
+	}
+	"TF_WEAPON_WRENCH"
+	{
+		"tr"	"İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_BONESAW"
+	{
+		"tr"	"KEMİK TESTERESİ"
+	}
+	"TF_WEAPON_SHOTGUN"
+	{
+		"tr"	"AV TÜFEĞİ"
+	}
+	"TF_WEAPON_SCATTERGUN"
+	{
+		"tr"	"ÇİFTE"
+	}
+	"TF_WEAPON_SNIPERRIFLE"
+	{
+		"tr"	"TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN"
+	{
+		"tr"	"MINIGUN"
+	}
+	"TF_WEAPON_SMG"
+	{
+		"tr"	"SMG"
+	}
+	"TF_WEAPON_SYRINGEGUN"
+	{
+		"tr"	"ŞIRINGA SİLAHI"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER"
+	{
+		"tr"	"ROKETATAR"
+	}
+	"TF_WEAPON_GRENADELAUNCHER"
+	{
+		"tr"	"BOMBA ATAR"
+	}
+	"TF_WEAPON_PIPEBOMBLAUNCHER"
+	{
+		"tr"	"YAPIŞKAN BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER"
+	{
+		"tr"	"ALEV SİLAHI"
+	}
+	"TF_WEAPON_PISTOL"
+	{
+		"tr"	"TABANCA"
+	}
+	"TF_WEAPON_REVOLVER"
+	{
+		"tr"	"ALTIPATLAR"
+	}
+	"TF_WEAPON_MEDIGUN"
+	{
+		"tr"	"SIHHİLAH"
+	}
+	"TF_WEAPON_WATCH"
+	{
+		"tr"	"GÖRÜNMEZLİK SAATİ"
+	}
 	"TF_THEPOWERJACK"
 	{
 		"tr"	"AKÜLÜ KRİKOLYOZ"
@@ -223,6 +315,10 @@
 	"TF_HALLOWEENBOSS_AXE"
 	{
 		"tr"	"HORSELESS HEADLESS HORSEMANN'İN KELLE ALICISI"
+	}
+	"TF_TTG_MAXGUN"
+	{
+		"tr"	"LUGERMORPH"
 	}
 	"TF_TTG_WATCH"
 	{
@@ -555,5 +651,313 @@
 	"TF_BLACKROSE"
 	{
 		"tr"	"KARA GÜL"
+	}
+	"TF_DS_DUMPSTERDEVICE"
+	{
+		"tr"	"KERATANIN ROKETATARI"
+	}
+	"TF_WEAPON_SPY_SAPPER"
+	{
+		"tr"	"Bozucu"
+	}
+	"TF_WEAPON_PDA_ENGINEER_BUILDER"
+	{
+		"tr"	"Kurulum KDY"
+	}
+	"TF_LOLLICHOP"
+	{
+		"tr"	"LOLİKOPART"
+	}
+	"TF_SCORCHSHOT"
+	{
+		"tr"	"KAVURUCU ATIŞ"
+	}
+	"TF_RAINBLOWER"
+	{
+		"tr"	"GÖKKUŞAĞI ÜFLEYİCİ"
+	}
+	"TF_PRO_SMG"
+	{
+		"tr"	"TEMİZLEYİCİNİN KISA TÜFEĞİ"
+	}
+	"TF_PRO_SNIPERRIFLE"
+	{
+		"tr"	"SUİKASTÇİNİN İMZASI"
+	}
+	"TF_WEAPON_PEP_SCATTERGUN"
+	{
+		"tr"	"BEBEK YÜZLÜNÜN ATEŞLEYİCİSİ"
+	}
+	"TF_WEAPON_PEP_PISTOL"
+	{
+		"tr"	"TATLI OĞLANIN CEP TABANCASI"
+	}
+	"TF_UNIQUE_PICKAXE_ESCAPEPLAN"
+	{
+		"tr"	"KAÇIŞ PLANI"
+	}
+	"TF_WEAPON_SNIPERRIFLE_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_ADVANCEDMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ GÜMÜŞ ROKETATAR"
+	}
+	"TF_WEAPON_SNIPERRIFLE_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_ADVANCEDMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ALTIN ROKETATAR"
+	}
+	"TF_SD_SAPPER"
+	{
+		"tr"	"BÜROKRATİK KAYIT ALETİ"
+	}
+	"TF_SD_MINIGUN"
+	{
+		"tr"	"HUO LONG ATEŞLEYİCİSİ"
+	}
+	"TF_SD_CLEAVER"
+	{
+		"tr"	"UÇAN GİYOTİN"
+	}
+	"TF_SD_SIGN"
+	{
+		"tr"	"NEON IŞIKLI YOKEDİCİ"
+	}
+	"TF_SD_SAPPER"
+	{
+		"tr"	"BÜROKRATİK KAYIT ALETİ"
+	}
+	"TF_SD_MINIGUN"
+	{
+		"tr"	"HUO LONG ATEŞLEYİCİSİ"
+	}
+	"TF_SD_CLEAVER"
+	{
+		"tr"	"UÇAN GİYOTİN"
+	}
+	"TF_SD_SIGN"
+	{
+		"tr"	"NEON IŞIKLI YOKEDİCİ"
+	}
+	"TF_MINIGUN_DEFLECTOR"
+	{
+		"tr"	"SAPTIRICI"
+	}
+	"TF_CSGO_AWP"
+	{
+		"tr"	"AWPUL EL"
+	}
+	"TF_ROBOT_SANDVICH"
+	{
+		"tr"	"ROBO-SANDVİÇ"
+	}
+	"TF_TW_STAFF"
+	{
+		"tr"	"ÖZGÜRLÜK ASASI"
+	}
+	"TF_WEAPON_SNIPERRIFLE_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_INTERMEDIATEMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ PASLI ROKETATAR"
+	}
+	"TF_WEAPON_SNIPERRIFLE_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_INTERMEDIATEMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ KANLI ROKETATAR"
+	}
+	"TF_WEAPON_SNIPERRIFLE_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_EXPERTMVMLOOT"
+	{
+		"tr"	"ROBOT KATİLİ KARAELMAS ROKETATAR"
+	}
+	"TF_WEAPON_SNIPERRIFLE_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS TÜFEK"
+	}
+	"TF_WEAPON_MINIGUN_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS MINIGUN"
+	}
+	"TF_WEAPON_KNIFE_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS BIÇAK"
+	}
+	"TF_WEAPON_WRENCH_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS İNGİLİZ ANAHTARI"
+	}
+	"TF_WEAPON_MEDIGUN_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS SIHHİLAH"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS BOMBA ATAR"
+	}
+	"TF_WEAPON_FLAMETHROWER_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS ALEV SİLAHI"
+	}
+	"TF_WEAPON_SCATTERGUN_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS ÇİFTE"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_EXPERTMVMRARELOOT"
+	{
+		"tr"	"ROBOT KATİLİ ELMAS ROKETATAR"
 	}
 }
