--- a/translations/ru/weapons.phrases.tf.txt
+++ b/translations/ru/weapons.phrases.tf.txt
@@ -156,6 +156,98 @@
 	{
 		"ru"	"Вита-пила"
 	}
+	"TF_WEAPON_BAT"
+	{
+		"ru"	"Бита"
+	}
+	"TF_WEAPON_BOTTLE"
+	{
+		"ru"	"Бутылка"
+	}
+	"TF_WEAPON_FIREAXE"
+	{
+		"ru"	"Пожарный топор"
+	}
+	"TF_WEAPON_CLUB"
+	{
+		"ru"	"Кукри"
+	}
+	"TF_WEAPON_KNIFE"
+	{
+		"ru"	"Нож"
+	}
+	"TF_WEAPON_FISTS"
+	{
+		"ru"	"Кулаки"
+	}
+	"TF_WEAPON_SHOVEL"
+	{
+		"ru"	"Лопата"
+	}
+	"TF_WEAPON_WRENCH"
+	{
+		"ru"	"Гаечный ключ"
+	}
+	"TF_WEAPON_BONESAW"
+	{
+		"ru"	"Медицинская пила"
+	}
+	"TF_WEAPON_SHOTGUN"
+	{
+		"ru"	"Дробовик"
+	}
+	"TF_WEAPON_SCATTERGUN"
+	{
+		"ru"	"Обрез"
+	}
+	"TF_WEAPON_SNIPERRIFLE"
+	{
+		"ru"	"Снайперская винтовка"
+	}
+	"TF_WEAPON_MINIGUN"
+	{
+		"ru"	"Пулемет"
+	}
+	"TF_WEAPON_SMG"
+	{
+		"ru"	"ППМ"
+	}
+	"TF_WEAPON_SYRINGEGUN"
+	{
+		"ru"	"Шприцемет"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER"
+	{
+		"ru"	"Ракетомет"
+	}
+	"TF_WEAPON_GRENADELAUNCHER"
+	{
+		"ru"	"Гранатомет"
+	}
+	"TF_WEAPON_PIPEBOMBLAUNCHER"
+	{
+		"ru"	"Липучкомет"
+	}
+	"TF_WEAPON_FLAMETHROWER"
+	{
+		"ru"	"Огнемет"
+	}
+	"TF_WEAPON_PISTOL"
+	{
+		"ru"	"Пистолет"
+	}
+	"TF_WEAPON_REVOLVER"
+	{
+		"ru"	"Револьвер"
+	}
+	"TF_WEAPON_MEDIGUN"
+	{
+		"ru"	"Лечебная пушка"
+	}
+	"TF_WEAPON_WATCH"
+	{
+		"ru"	"Часы невидимости"
+	}
 	"TF_THEPOWERJACK"
 	{
 		"ru"	"Разъединитель"
@@ -223,6 +315,10 @@
 	"TF_HALLOWEENBOSS_AXE"
 	{
 		"ru"	"Секира Пешего всадника без головы"
+	}
+	"TF_TTG_MAXGUN"
+	{
+		"ru"	"Люгерморф"
 	}
 	"TF_TTG_WATCH"
 	{
@@ -555,5 +651,313 @@
 	"TF_BLACKROSE"
 	{
 		"ru"	"Черная роза"
+	}
+	"TF_DS_DUMPSTERDEVICE"
+	{
+		"ru"	"Базука бродяги"
+	}
+	"TF_WEAPON_SPY_SAPPER"
+	{
+		"ru"	"Жучок"
+	}
+	"TF_WEAPON_PDA_ENGINEER_BUILDER"
+	{
+		"ru"	"КПК постройки"
+	}
+	"TF_LOLLICHOP"
+	{
+		"ru"	"Кледенец"
+	}
+	"TF_SCORCHSHOT"
+	{
+		"ru"	"Обжигающий выстрел"
+	}
+	"TF_RAINBLOWER"
+	{
+		"ru"	"Радужигатель"
+	}
+	"TF_PRO_SMG"
+	{
+		"ru"	"Карабин Чистильщика"
+	}
+	"TF_PRO_SNIPERRIFLE"
+	{
+		"ru"	"Разжигатель разбойника"
+	}
+	"TF_WEAPON_PEP_SCATTERGUN"
+	{
+		"ru"	"Обрез Малыша"
+	}
+	"TF_WEAPON_PEP_PISTOL"
+	{
+		"ru"	"Дамский пистолет Красавчика"
+	}
+	"TF_UNIQUE_PICKAXE_ESCAPEPLAN"
+	{
+		"ru"	"План эвакуации"
+	}
+	"TF_WEAPON_SNIPERRIFLE_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряная снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряная лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_ADVANCEDMVMLOOT"
+	{
+		"ru"	"Серебряный ракетомет ботоубийцы"
+	}
+	"TF_WEAPON_SNIPERRIFLE_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотая снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотая лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_ADVANCEDMVMRARELOOT"
+	{
+		"ru"	"Золотой ракетомет ботоубийцы"
+	}
+	"TF_SD_SAPPER"
+	{
+		"ru"	"Откатофон"
+	}
+	"TF_SD_MINIGUN"
+	{
+		"ru"	"Огненный дракон"
+	}
+	"TF_SD_CLEAVER"
+	{
+		"ru"	"Летающая гильотина"
+	}
+	"TF_SD_SIGN"
+	{
+		"ru"	"Неоновый аннигилятор"
+	}
+	"TF_SD_SAPPER"
+	{
+		"ru"	"Откатофон"
+	}
+	"TF_SD_MINIGUN"
+	{
+		"ru"	"Огненный дракон"
+	}
+	"TF_SD_CLEAVER"
+	{
+		"ru"	"Летающая гильотина"
+	}
+	"TF_SD_SIGN"
+	{
+		"ru"	"Неоновый аннигилятор"
+	}
+	"TF_MINIGUN_DEFLECTOR"
+	{
+		"ru"	"Отражатель"
+	}
+	"TF_CSGO_AWP"
+	{
+		"ru"	"Слонобой"
+	}
+	"TF_ROBOT_SANDVICH"
+	{
+		"ru"	"Робо-бутерброд"
+	}
+	"TF_TW_STAFF"
+	{
+		"ru"	"Посох свободы"
+	}
+	"TF_WEAPON_SNIPERRIFLE_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавая снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавая лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_INTERMEDIATEMVMLOOT"
+	{
+		"ru"	"Ржавый ракетомет ботоубийцы"
+	}
+	"TF_WEAPON_SNIPERRIFLE_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленная снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленная лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_INTERMEDIATEMVMRARELOOT"
+	{
+		"ru"	"Окровавленный ракетомет ботоубийцы"
+	}
+	"TF_WEAPON_SNIPERRIFLE_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовая снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовая лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_EXPERTMVMLOOT"
+	{
+		"ru"	"Карбонадовый ракетомет ботоубийцы"
+	}
+	"TF_WEAPON_SNIPERRIFLE_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазная снайперская винтовка ботоубийцы"
+	}
+	"TF_WEAPON_MINIGUN_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный пулемет ботоубийцы"
+	}
+	"TF_WEAPON_KNIFE_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный нож ботоубийцы"
+	}
+	"TF_WEAPON_WRENCH_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный гаечный ключ ботоубийцы"
+	}
+	"TF_WEAPON_MEDIGUN_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазная лечебная пушка ботоубийцы"
+	}
+	"TF_WEAPON_STICKYBOMBLAUNCHER_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный липучкомет ботоубийцы"
+	}
+	"TF_WEAPON_FLAMETHROWER_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный огнемет ботоубийцы"
+	}
+	"TF_WEAPON_SCATTERGUN_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный обрез ботоубийцы"
+	}
+	"TF_WEAPON_ROCKETLAUNCHER_EXPERTMVMRARELOOT"
+	{
+		"ru"	"Алмазный ракетомет ботоубийцы"
 	}
 }
